# rtdlib

./: .drone.yml  .gitignore  .travis.yml  Cargo.toml  README.md  tdapi_web.txt
.github/workflows/: develop.yml  publish.yml
examples/: rtdtest.rs  test_client.rs
generate/: Cargo.toml  README.md
generate/src/: apipe.rs  downloader.rs  filter.rs  generator.rs  log.rs  main.rs  parser.rs
generate/tpl/: rtd_common.tpl.txt  schema.rtd.tpl.toml  tdfn.tpl.txt
schema/: full_example.tpl.toml  schema.toml
scripts/: run_in_container.sh
src/: client.rs  errors.rs  lib.rs  rtdjson.rs  tdjson.rs  tdkit.rs  tdsupplement.rs  types.rs
src/types/: _common.rs  accept_call.rs  accept_terms_of_service.rs  account_ttl.rs  add_chat_member.rs  add_chat_members.rs  add_custom_server_language_pack.rs  add_favorite_sticker.rs  add_local_message.rs  add_log_message.rs  add_network_statistics.rs  add_proxy.rs  add_recent_sticker.rs  add_recently_found_chat.rs  add_saved_animation.rs  add_sticker_to_set.rs  address.rs  animated_chat_photo.rs  animated_emoji.rs  animation.rs  animations.rs  answer_callback_query.rs  answer_custom_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  audio.rs  authentication_code_info.rs  authentication_code_type.rs  authentication_code_type_call.rs  authentication_code_type_flash_call.rs  authentication_code_type_sms.rs  authentication_code_type_telegram_message.rs  authorization_state.rs  authorization_state_closed.rs  authorization_state_closing.rs  authorization_state_logging_out.rs  authorization_state_ready.rs  authorization_state_wait_code.rs  authorization_state_wait_encryption_key.rs  (+1159 more)
tests/: test_authorization_state.rs  test_json.rs
