[package]
name = "rtdlib"
version = "1.3.4"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "TDLib for rust"
homepage = "https://github.com/fewensa/rtdlib"
repository = "https://github.com/fewensa/rtdlib"
license = "MIT"
keywords = ["tdlib", "telegram", "bindings"]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

[dependencies]
libc = "0.2"

serde = "1"
serde_derive = "1"
serde_json = "1"
serde-aux = "0.6"

rtdlib-sys = { version = "0.1", optional = true }

[features]
default = []
sys = ["rtdlib-sys"]
