[package]
name = "rtdlib"
version = "0.8.1"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "TDLib for rust"
homepage = "https://github.com/fewensa/rtdlib"
repository = "https://github.com/fewensa/rtdlib"
license = "MIT"
keywords = ["tdlib", "telegram"]
categories = ["data-structures"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

[dependencies]
libc = "0.2"

serde = "1"
serde_derive = "1"
serde_json = "1"
serde-aux = "0.6"

uuid = { version = "0.8", features = ["v4"] }

rtdlib-sys = { version = "0.1", optional = true }

[features]
default = []
sys = ["rtdlib-sys"]
