[package]
name = "generate"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "RTDLIB generate"

readme = "README.md"

edition = "2018"

[dependencies]

scraper = "0.10"
reqwest = "0.9"

tera = "0.11"


text-reader = "0.2"
rstring-builder = "0.1"
toolkit = "0.1.1"

serde = "1"
serde_derive = "1"
serde_json = "1"

case = "1.0.0"

hostname = "0.1.5"
